added improvements(including type) to the number adding